# Hive

./: .clang-format  .defaults.sh  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hive_config.sample  CHANGELOG.md  CMakeLists.txt  CMakePresets-Project.json  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  extend_config_file.sh  fix_files.sh  gen_appimage.sh  gen_cmake.sh  gen_install.sh  local_definitions.cmake  setup_fresh_env.sh
installer/: CMakeLists.txt
installer/nsis/: NSIS.definitions.nsh.in  NSIS.template.in
installer/productbuild/: CPack.distribution.dist.in
installer/win32/: run_vcredist.bat
libs/QtMate/: CMakeLists.txt  pch.cpp  pch.hpp
libs/modelsLibrary/: CMakeLists.txt  VirtualController.cpp  commandsExecutorImpl.cpp  commandsExecutorImpl.hpp  config.hpp.in  controllerManager.cpp  discoveredEntitiesModel.cpp  helper.cpp  helper_macOS.mm  helper_unix.cpp  helper_win32.cpp  modelsLibrary.cpp  networkInterfacesModel.cpp  pch.cpp  pch.hpp  virtualController.cpp  virtualController.hpp
libs/widgetModelsLibrary/: CMakeLists.txt  compatibilityLogoCache.cpp  config.hpp.in  discoveredEntitiesTableItemDelegate.cpp  discoveredEntitiesTableModel.cpp  entityLogoCache.cpp  errorIconItemDelegate.cpp  errorItemDelegate.cpp  imageItemDelegate.cpp  networkInterfacesListItemDelegate.cpp  networkInterfacesListModel.cpp  painterHelper.cpp  pch.cpp  pch.hpp  widgetModelsLibrary.cpp
src/: CMakeLists.txt  aboutDialog.cpp  aboutDialog.hpp  aboutDialog.ui  acquireStateItemDelegate.cpp  acquireStateItemDelegate.hpp  activeNetworkInterfaceModel.cpp  activeNetworkInterfaceModel.hpp  activeNetworkInterfacesModel.cpp  activeNetworkInterfacesModel.hpp  aecpCommandComboBox.cpp  aecpCommandComboBox.hpp  aecpCommandSlider.hpp  aecpCommandSpinBox.hpp  aecpCommandTextEntry.cpp  aecpCommandTextEntry.hpp  application.cpp  application.hpp  connectionMatrix.cpp  connectionMatrix.hpp  controlledEntityTreeWidget.cpp  controlledEntityTreeWidget.hpp  controlledEntityTreeWidgetItemDelegate.cpp  controlledEntityTreeWidgetItemDelegate.hpp  defaults.hpp  deviceDetailsChannelTableModel.cpp  deviceDetailsChannelTableModel.hpp  deviceDetailsDialog.cpp  deviceDetailsDialog.hpp  deviceDetailsDialog.ui  deviceDetailsLatencyTableModel.cpp  deviceDetailsLatencyTableModel.hpp  deviceDetailsStreamFormatTableModel.cpp  deviceDetailsStreamFormatTableModel.hpp  discoveredEntitiesView.cpp  discoveredEntitiesView.hpp  entityInspector.cpp  entityInspector.hpp  entityInspectorRoles.hpp  entityLogoCache.cpp  (+53 more)
src/avdecc/: channelConnectionManager.cpp  channelConnectionManager.hpp  commandChain.cpp  commandChain.hpp  controllerManager.cpp  controllerManager.hpp  controllerModel.cpp  controllerModel.hpp  euiValidator.hpp  helper.cpp  helper.hpp  hiveLogItems.hpp  loggerModel.cpp  loggerModel.hpp  mappingsHelper.cpp  mappingsHelper.hpp  mcDomainManager.cpp  mcDomainManager.hpp  mediaClockConnectionManager.cpp  mediaClockConnectionManager.hpp  numberValidator.hpp  stringValidator.hpp
src/connectionEditor/: connectionEditor.cpp  connectionEditor.hpp  connectionWorkspace.cpp  connectionWorkspace.hpp  nodeListModel.cpp  nodeListModel.hpp  nodeListView.cpp  nodeListView.hpp  nodeOrganizer.cpp  nodeOrganizer.hpp
src/connectionMatrix/: cornerWidget.cpp  cornerWidget.hpp  headerItem.cpp  headerItem.hpp  headerView.cpp  headerView.hpp  itemDelegate.cpp  itemDelegate.hpp  legend.cpp  legend.hpp  legendDialog.cpp  legendDialog.hpp  model.cpp  model.hpp  node.cpp  node.hpp  paintHelper.cpp  paintHelper.hpp  view.cpp  view.hpp
src/counters/: avbInterfaceCountersTreeWidgetItem.cpp  avbInterfaceCountersTreeWidgetItem.hpp  clockDomainCountersTreeWidgetItem.cpp  clockDomainCountersTreeWidgetItem.hpp  countersManager.cpp  countersManager.hpp  entityCountersTreeWidgetItem.cpp  entityCountersTreeWidgetItem.hpp  streamInputCountersTreeWidgetItem.cpp  streamInputCountersTreeWidgetItem.hpp  streamOutputCountersTreeWidgetItem.cpp  streamOutputCountersTreeWidgetItem.hpp
src/diagnostics/: controlDiagnosticsTreeWidgetItem.cpp  controlDiagnosticsTreeWidgetItem.hpp  entityDiagnosticsTreeWidgetItem.cpp  entityDiagnosticsTreeWidgetItem.hpp  streamInputDiagnosticsTreeWidgetItem.cpp  streamInputDiagnosticsTreeWidgetItem.hpp
src/discoveredEntities/: view.cpp  view.hpp
src/internals/: config.hpp.in
src/mediaClock/: abstractTreeItem.cpp  abstractTreeItem.hpp  domainTreeDomainNameDelegate.cpp  domainTreeDomainNameDelegate.hpp  domainTreeDomainNameDelegate.ui  domainTreeEntityNameDelegate.cpp  domainTreeEntityNameDelegate.hpp  domainTreeEntityNameDelegate.ui  domainTreeItem.cpp  domainTreeItem.hpp  domainTreeModel.cpp  domainTreeModel.hpp  entityTreeItem.cpp  entityTreeItem.hpp  mediaClockManagementDialog.cpp  mediaClockManagementDialog.hpp  mediaClockManagementDialog.ui  unassignedListModel.cpp  unassignedListModel.hpp
src/modelsLibrary/: CMakeLists.txt  controllerManager.cpp  networkInterfaceModel.cpp  pch.hpp
src/newsFeed/: newsFeed.cpp  newsFeed.hpp
src/nodeTreeDynamicWidgets/: asPathWidget.cpp  asPathWidget.hpp  audioUnitDynamicTreeWidgetItem.cpp  audioUnitDynamicTreeWidgetItem.hpp  avbInterfaceDynamicTreeWidgetItem.cpp  avbInterfaceDynamicTreeWidgetItem.hpp  controlValuesDynamicTreeWidgetItem.cpp  controlValuesDynamicTreeWidgetItem.hpp  discoveredInterfacesTreeWidgetItem.cpp  discoveredInterfacesTreeWidgetItem.hpp  listenerStreamConnectionWidget.cpp  listenerStreamConnectionWidget.hpp  memoryObjectDynamicTreeWidgetItem.cpp  memoryObjectDynamicTreeWidgetItem.hpp  milanDynamicStateTreeWidgetItem.cpp  milanDynamicStateTreeWidgetItem.hpp  streamConnectionWidget.cpp  streamConnectionWidget.hpp  streamDynamicTreeWidgetItem.cpp  streamDynamicTreeWidgetItem.hpp  streamFormatComboBox.cpp  streamFormatComboBox.hpp  streamPortDynamicTreeWidgetItem.cpp  streamPortDynamicTreeWidgetItem.hpp  talkerStreamConnectionWidget.cpp  talkerStreamConnectionWidget.hpp
src/processHelper/: processHelper.hpp  processHelper_macos.mm  processHelper_unix.cpp  (+1 more)
tools/: CMakeLists.txt  generate_oui.py  json2msgPack.cpp  msgPack2json.cpp
(+257 files in other folders)
